--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run build:client && npm run build:server && npm run test",
     "build:client": "tsc && vite build",
-    "build:server": "tsc -p tsconfig.server.json",
+    "build:server": "tsc",
     "dev:client": "vite",
     "dev:server": "tsx watch server/src/server.ts",
     "preview": "vite preview",
